--- a/cloudflow/job/templates/lsofs.fcst.in
+++ b/cloudflow/job/templates/lsofs.fcst.in
@@ -12,7 +12,7 @@
  !======Copyright 1998, Regents of University of Minnesota========!
  !                                                                !
  &NML_CASE
- CASE_TITLE      = 'SFBOFS',
+ CASE_TITLE      = 'LSOFS',
  TIMEZONE        = 'UTC',
  DATE_FORMAT     = 'YMD',
  DATE_REFERENCE  = '__DATE_REFERENCE__',
@@ -22,15 +22,15 @@
 
  &NML_STARTUP
 STARTUP_TYPE      = 'hotstart',
- STARTUP_FILE      = 'sfbofs.t__HH__z.__CDATE__.rst.nowcast.nc',
+ STARTUP_FILE      = 'lsofs.t__HH__z.__CDATE__.rst.nowcast.nc',
  STARTUP_UV_TYPE   = 'set values',
  STARTUP_TURB_TYPE = 'set values',
  STARTUP_TS_TYPE   = 'set values',
- STARTUP_T_VALS  = 20.0000000E+00  ,
- STARTUP_S_VALS  = 35.0000000E+00  ,
+ STARTUP_T_VALS  = 3.4500000E+00  ,
+ STARTUP_S_VALS  = 0.0000000E+00  ,
  STARTUP_U_VALS  =  0.0000000E+00,
  STARTUP_V_VALS  =  0.0000000E+00,
- STARTUP_DMAX    =  0.0000000E+00
+ STARTUP_DMAX    =  -10.0000000E+00
  /
 
  &NML_IO
@@ -44,10 +44,10 @@ STARTUP_TYPE      = 'hotstart',
  /
 
  &NML_INTEGRATION
- EXTSTEP_SECONDS =  1.0,
- ISPLIT          =  6,
- IRAMP           =  1800,
- MIN_DEPTH       =  0.2,
+ EXTSTEP_SECONDS =  5.0,
+ ISPLIT          =  2,
+ IRAMP           =  0,
+ MIN_DEPTH       =  0.1,
  STATIC_SSH_ADJ  =  0.0000000E+00
  /
 
@@ -65,23 +65,29 @@ STARTUP_TYPE      = 'hotstart',
  NC_OUTPUT_STACK = 1,
  NC_SUBDOMAIN_FILES      = FVCOM,
  NC_GRID_METRICS = T,
+ NC_FILE_DATE    = F,
  NC_VELOCITY     = T,
  NC_SALT_TEMP    = T,
- NC_TURBULENCE   = F,
+ NC_TURBULENCE   = T,
  NC_AVERAGE_VEL  = F,
- NC_VERTICAL_VEL = F,
+ NC_VERTICAL_VEL = T,
  NC_WIND_VEL     = T,
  NC_WIND_STRESS  = F,
  NC_ATM_PRESS  =   T,
  NC_EVAP_PRECIP  = F,
  NC_SURFACE_HEAT = T,
- NC_GROUNDWATER  = F
+ NC_GROUNDWATER  = F,
+ NC_ICE          = T,
+ NC_BIO          = F,
+ NC_WQM          = F,
+ NC_VORTICITY    = F,
+ NC_UARD_OBCN    = F
  /
 
 &NML_NETCDF_SURFACE
  NCSF_ON   = F,
  NCSF_FIRST_OUT    = '__START_DATE__ __HHMMSS__',
- NCSF_OUT_INTERVAL = 'seconds=3600.0',
+ NCSF_OUT_INTERVAL = 'seconds=0.0',
  NCSF_OUTPUT_STACK = 1,
  NCSF_SUBDOMAIN_FILES = 'FVCOM',
  NCSF_GRID_METRICS = T,
@@ -123,46 +129,37 @@ STARTUP_TYPE      = 'hotstart',
  WIND_ON      = T,
  WIND_TYPE    = 'speed',
  WIND_STRESS_METHOD = 'LP1981' , 
- WIND_FILE    = 'sfbofs.t__HH__z.__CDATE__.met.forecast.nc',
+ WIND_FILE    = 'lsofs.t__HH__z.__CDATE__.met.forecast.nc',
  WIND_KIND    = 'variable',
- WIND_X       =  0.0400000E+00, 
- WIND_Y       =  0.0200000E+00,
+ WIND_X       =  0.0000000E+00, 
+ WIND_Y       =  0.0000000E+00,
  HEATING_ON     = F,
  HEATING_TYPE   = 'flux',
  HEATING_KIND   = 'variable',
- HEATING_FILE   = 'sfbofs.t__HH__z.__CDATE__.met.forecast.nc',
- HEATING_LONGWAVE_LENGTHSCALE  = 1.4,
- HEATING_LONGWAVE_PERCTAGE     = 0.78,
- HEATING_SHORTWAVE_LENGTHSCALE = 6.3,
+ HEATING_FILE   = 'lsofs.t__HH__z.__CDATE__.met.forecast.nc',
+ HEATING_LONGWAVE_LENGTHSCALE  = 3.6,
+ HEATING_LONGWAVE_PERCTAGE     = 0.55,
+ HEATING_SHORTWAVE_LENGTHSCALE = 0.35,
  HEATING_RADIATION  = 0.0000000E+00,
  HEATING_NETFLUX    = 0.0000000E+00,
- PRECIPITATION_ON   = F,
+ PRECIPITATION_ON   = T,
  PRECIPITATION_KIND = 'variable',
- PRECIPITATION_FILE = 'wrf_for.nc',
+ PRECIPITATION_FILE = 'lsofs.t__HH__z.__CDATE__.met.forecast.nc',
  PRECIPITATION_PRC  = 0.0000000E+00,
  PRECIPITATION_EVP  = 0.0000000E+00,
  
  AIRPRESSURE_ON    = T,                       
  AIRPRESSURE_KIND  = 'variable',
- AIRPRESSURE_FILE  = 'sfbofs.t__HH__z.__CDATE__.met.forecast.nc',
- AIRPRESSURE_VALUE =  0.005500000E+00,
- WAVE_ON = F,
- WAVE_FILE       = 'none'                                                    ,
- WAVE_KIND       = 'none'                                                    ,
- WAVE_HEIGHT     =  0.0000000E+00,
- WAVE_LENGTH     =  0.0000000E+00,
- WAVE_DIRECTION  =  0.0000000E+00,
- WAVE_PERIOD     =  0.0000000E+00,
- WAVE_PER_BOT    =  0.0000000E+00,
- WAVE_UB_BOT     =  0.0000000E+00
+ AIRPRESSURE_FILE  = 'lsofs.t__HH__z.__CDATE__.met.forecast.nc',
+ AIRPRESSURE_VALUE =  0.005500000E+00
  /
 
  &NML_HEATING_CALCULATED
  HEATING_CALCULATE_ON   = T,
  HEATING_CALCULATE_TYPE = 'flux',
- HEATING_CALCULATE_FILE = 'sfbofs.t__HH__z.__CDATE__.hflux.forecast.nc',
+ HEATING_CALCULATE_FILE = 'lsofs.t__HH__z.__CDATE__.hflux.forecast.nc',
  HEATING_CALCULATE_KIND = 'variable',
- HEATING_FRESHWATER      = F,
+ HEATING_FRESHWATER      = T,
  COARE_VERSION          = 'COARE26Z',
  ZTT                    = 2.0000000E+00,
  ZQQ                    = 2.0000000E+00,
@@ -171,24 +168,34 @@ STARTUP_TYPE      = 'hotstart',
  SURFACE_PRESSURE        =  0.000000000000000E+000,
  LONGWAVE_RADIATION      =  0.000000000000000E+000,
  SHORTWAVE_RADIATION     =  0.000000000000000E+000,
- HEATING_LONGWAVE_PERCTAGE_IN_HEATFLUX   =  0.780000000000000,
- HEATING_LONGWAVE_LENGTHSCALE_IN_HEATFLUX        =   1.40000000000000,
- HEATING_SHORTWAVE_LENGTHSCALE_IN_HEATFLUX       =   6.30000000000000
+ HEATING_LONGWAVE_PERCTAGE_IN_HEATFLUX   =  0.550000000000000,
+ HEATING_LONGWAVE_LENGTHSCALE_IN_HEATFLUX        =   3.60000000000000,
+ HEATING_SHORTWAVE_LENGTHSCALE_IN_HEATFLUX       =   0.35000000000000
+ /
+ &NML_HEATING_SOLAR
+ HEATING_SOLAR_ON        = F,
+ HEATING_SOLAR_TYPE      = 'flux',
+ HEATING_SOLAR_FILE      = 'lsofs.t__HH__z.__CDATE__.met.forecast.nc',
+ HEATING_SOLAR_KIND      = 'variable',
+ ZM                      = 10.0,        ! Units = meters
+ LATITUDE_REFERENCE      = 0.0,
+ LONGITUDE_REFERENCE     = 0.0,
+ JULIANDAY_REFERENCE     = 0.0
  /
 
  &NML_PHYSICS
  HORIZONTAL_MIXING_TYPE          = 'closure',
  HORIZONTAL_MIXING_FILE          = 'none',
  HORIZONTAL_MIXING_KIND          = 'constant',
- HORIZONTAL_MIXING_COEFFICIENT   = 1.0,
+ HORIZONTAL_MIXING_COEFFICIENT   = 0.1,
  HORIZONTAL_PRANDTL_NUMBER       = 1.0,
  VERTICAL_MIXING_TYPE            = 'closure',
- VERTICAL_MIXING_COEFFICIENT     = 1.0000E-05,
+ VERTICAL_MIXING_COEFFICIENT     = 1.0000E-06,
  VERTICAL_PRANDTL_NUMBER         = 1.0000,
  BOTTOM_ROUGHNESS_TYPE   = 'orig',
- BOTTOM_ROUGHNESS_KIND   = 'static',
- BOTTOM_ROUGHNESS_FILE   = 'sfbofs_brf.nc' ,
- BOTTOM_ROUGHNESS_LENGTHSCALE    =  0.003,
+ BOTTOM_ROUGHNESS_KIND   = 'constant',
+ BOTTOM_ROUGHNESS_FILE   = 'none' ,
+ BOTTOM_ROUGHNESS_LENGTHSCALE    =  0.002,
  BOTTOM_ROUGHNESS_MINIMUM        =  0.0025,
  CONVECTIVE_OVERTURNING       = F,
  SCALAR_POSITIVITY_CONTROL    = T,
@@ -198,32 +205,32 @@ STARTUP_TYPE      = 'hotstart',
  RECALCULATE_RHO_MEAN         = F,
  INTERVAL_RHO_MEAN            = 'days=1.0',
  TEMPERATURE_ACTIVE           = T,
- SALINITY_ACTIVE              = T,
+ SALINITY_ACTIVE              = F,
  SURFACE_WAVE_MIXING          = F,
- WETTING_DRYING_ON            = T
+ WETTING_DRYING_ON            = T,
+ ADCOR_ON                     = T
  /
 
  &NML_RIVER_TYPE
- RIVER_NUMBER    =          9,
- RIVER_TS_SETTING        = 'calculated', !'specified',
- TS_ADJUST_METHOD = 'average', ! or 'maximum',
- RIVER_INFLOW_LOCATION   = 'node',
+ RIVER_NUMBER    =          20,
+ RIVER_TS_SETTING        = 'specified',
+ RIVER_INFLOW_LOCATION   = 'edge',
  RIVER_INFO_FILE   = 'RIVERS_NAMELIST.nml',
  RIVER_KIND        = 'variable'
  /
 
  &NML_OPEN_BOUNDARY_CONTROL
- OBC_ON                     = T,
- OBC_NODE_LIST_FILE         = 'sfbofs_obc.dat',
- OBC_ELEVATION_FORCING_ON   = T,
- OBC_ELEVATION_FILE         = 'sfbofs.t__HH__z.__CDATE__.obc.nc',
+ OBC_ON                     = F,
+ OBC_NODE_LIST_FILE         = 'lsofs_obc.dat',
+ OBC_ELEVATION_FORCING_ON   = F,
+ OBC_ELEVATION_FILE         = 'lsofs.t__HH__z.__CDATE__.obc.nc',
  OBC_TS_TYPE                = 1,
- OBC_TEMP_NUDGING           = T,
- OBC_TEMP_FILE              = 'sfbofs.t__HH__z.__CDATE__.obc.nc',
- OBC_TEMP_NUDGING_TIMESCALE =  0.002,
- OBC_SALT_NUDGING           = T,
- OBC_SALT_FILE              = 'sfbofs.t__HH__z.__CDATE__.obc.nc',
- OBC_SALT_NUDGING_TIMESCALE =  0.002,
+ OBC_TEMP_NUDGING           = F,
+ OBC_TEMP_FILE              = 'lsofs.t__HH__z.__CDATE__.obc.nc',
+ OBC_TEMP_NUDGING_TIMESCALE =  1.0000000E+00,
+ OBC_SALT_NUDGING           = F,
+ OBC_SALT_FILE              = 'none',
+ OBC_SALT_NUDGING_TIMESCALE =  0.0000000E+00,
  OBC_MEANFLOW               = F,
  OBC_MEANFLOW_FILE          = 'none',
  OBC_TIDEOUT_INITIAL     =           0,
@@ -233,13 +240,13 @@ STARTUP_TYPE      = 'hotstart',
  /
 
  &NML_GRID_COORDINATES
- GRID_FILE            = 'sfbofs_grd.dat',
+ GRID_FILE            = 'lsofs_grd.dat',
  GRID_FILE_UNITS      = 'degrees',
- PROJECTION_REFERENCE = 'init=nad83:402',
- SIGMA_LEVELS_FILE    = 'sfbofs_sigma.dat',
- DEPTH_FILE      = 'sfbofs_dep.dat',
- CORIOLIS_FILE   = 'sfbofs_cor.dat',
- SPONGE_FILE     = 'sfbofs_spg.dat'
+ PROJECTION_REFERENCE = 'proj=utm +zone=16 +datum=NAD83',    
+ SIGMA_LEVELS_FILE    = 'lsofs_sigma.dat',
+ DEPTH_FILE      = 'lsofs_dep.dat',
+ CORIOLIS_FILE   = 'lsofs_cor.dat',
+ SPONGE_FILE     = 'lsofs_spg.dat'
  /
  
  &NML_GROUNDWATER
@@ -267,6 +274,7 @@ STARTUP_TYPE      = 'hotstart',
  DATA_ASSIMILATION       = F,
  DATA_ASSIMILATION_FILE  = 'none'                                  ,
  BIOLOGICAL_MODEL        = F,
+ STARTUP_BIO_TYPE        = 'observed', ! constant, linear, observed, set values,
  BIOLOGICAL_MODEL_FILE   = 'none'                                            ,
  SEDIMENT_MODEL  = F,
  SEDIMENT_MODEL_FILE     = 'none'                                            ,
@@ -277,15 +285,29 @@ STARTUP_TYPE      = 'hotstart',
  ICING_FORCING_KIND      = 'variable'                                        ,
  ICING_AIR_TEMP  =  0.0000000E+00,
  ICING_WSPD      =  0.0000000E+00,
- ICE_MODEL       = F,
- ICE_FORCING_FILE        = 'none'                                            ,
- ICE_FORCING_KIND        = 'none'                                            ,
+ ICE_MODEL       = T,
+ ICE_FORCING_FILE        = 'lsofs.t__HH__z.__CDATE__.met.forecast.nc'                                            ,
+ ICE_FORCING_KIND        = 'variable'                                            ,
  ICE_SEA_LEVEL_PRESSURE  =  0.0000000E+00,
- ICE_AIR_TEMP    =  0.0000000E+00,
+ ICE_AIR_TEMP            =  0.0000000E+00,
  ICE_SPEC_HUMIDITY       =  0.0000000E+00,
- ICE_SHORTWAVE   =  0.0000000E+00,
- ICE_CLOUD_COVER =  0.0000000E+00
+ ICE_SHORTWAVE           =  0.0000000E+00,
+ ICE_LONGWAVE_TYPE       = 'PW',
+ ICE_CLOUD_COVER         =  0.0000000E+00
  /
+ &NML_ICE
+ kstrength = 0,
+ krdg_partic = 1,
+ krdg_redist =  1,
+ albicev = 0.78,
+ albicei = 0.36,
+ albsnowv = 0.98,
+ albsnowi = 0.70,
+ kitd = 1,
+ kcatbound = 1,
+ i0vis = 0.70,
+ floediam = 300.
+/
 
  &NML_PROBES
  PROBES_ON       = F,
@@ -295,9 +317,9 @@ STARTUP_TYPE      = 'hotstart',
 
  &NML_STATION_TIMESERIES
  OUT_STATION_TIMESERIES_ON = T,
- STATION_FILE              = 'sfbofs_station.dat',
+ STATION_FILE              = 'lsofs_station.dat',
  LOCATION_TYPE             = 'node',
- GRID_EDGE_FILE_NAME       = 'sfbofs_station_edge.dat'
+ GRID_EDGE_FILE_NAME       = 'lsofs_station_edge.dat'
  OUT_ELEVATION             = T,
  OUT_VELOCITY_3D           = T,
  OUT_VELOCITY_2D           = F,
@@ -308,14 +330,14 @@ STARTUP_TYPE      = 'hotstart',
 
  &NML_NCNEST
  NCNEST_ON        = F,
- NCNEST_BLOCKSIZE = 50,
- NCNEST_NODE_FILES= 'sfbofs_nestnode.dat'
+ NCNEST_BLOCKSIZE = 120,
+ NCNEST_NODE_FILES= 'lsofs_nestnode.dat'
  /
 
  &NML_NESTING
  NESTING_ON        = F,
  NESTING_BLOCKSIZE = 5,
- NESTING_FILE_NAME = 'sfbofs.t__HH__z.__CDATE__.obc.nc'
+ NESTING_FILE_NAME = 'lsofs.t__HH__z.__CDATE__.obc.nc'
  /
 
  &NML_MLD
