--- a/cloudflow/job/templates/gomofs.ocean.in
+++ b/cloudflow/job/templates/gomofs.ocean.in
@@ -1027,7 +1027,7 @@
 
 ! Input tidal forcing file name.
 
-     TIDENAME == gomofs.roms.tides.nc
+     TIDENAME == gomofs.t__HH__z.__CDATE__.roms.tides.nc
 
 ! Input forcing NetCDF file name(s).
 !
