--- a/cloudflow/job/jobs/cloud_sandbox_experiment.template
+++ b/cloudflow/job/jobs/cloud_sandbox_experiment.template
@@ -1,6 +1,7 @@
 {
   "MODEL"     : "MODEL_CLASS",
-  "JOBTYPE"   : "XXX_MODEL_RUNTYPE",
+  "JOBTYPE"   : "XXX_MODEL_EXPERIMENT",
+  "APP"       : "basic",
   "EXEC"      : "/pathway/to/model/executable/on/head/node",
   "MODEL_DIR" : "/pathway/to/model/run/directory"
 }
